<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    >
    <include
        android:id="@+id/include"
        layout="@layout/custom_appbar_plus"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/get_otp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/btn_verify"
            android:textColor="#F2F2F2"
            android:textSize="@dimen/_18ssp"
            app:backgroundTint="#F2BB13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phonenum" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/verify_number"
            android:textAlignment="viewStart"
            android:textColor="#020202"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintEnd_toEndOf="@+id/phonenum"
            app:layout_constraintHorizontal_bias="0.168"
            app:layout_constraintStart_toStartOf="@+id/phonenum"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_194sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="#F7F7F7"
                android:drawableEnd="@drawable/ic_baseline_call_24"
                android:ems="10"
                android:hint="@string/edtxt_mobNo"
                android:inputType="phone"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="#515C6F"
                android:textColorHint="#515C6F" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>