<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".authUi.PhoneVerify">

    <include
        android:id="@+id/include"
        layout="@layout/custom_appbar"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_148sdp"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/signUp_txt"
            android:textAlignment="viewStart"
            android:textColor="#020202"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.185"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_307sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_62sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="#F7F7F7"
            app:cardBackgroundColor="#F7F7F7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phonenum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Fullname_otp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:background="#F7F7F7"
                        android:drawableEnd="@drawable/ic_baseline_perm_identity_24"
                        android:ems="10"
                        android:hint="@string/edtxt_name"
                        android:inputType="phone"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textColorHint="#515C6F" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/SignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_31sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/custom_button"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="@dimen/_27sdp"
                    android:text="@string/btn_signUp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#F2F2F2"
                    android:textSize="@dimen/_18ssp"
                    app:backgroundTint="#F2BB13"
                    app:iconGravity="end"
                    app:iconPadding="@dimen/_27sdp"
                    app:iconTint="#F2F2F2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phonenum_otp"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phonenum_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Email_otp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPhone_otp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:background="#F7F7F7"
                        android:drawableEnd="@drawable/ic_baseline_call_24"
                        android:ems="10"
                        android:hint="@string/edtxt_mobNo"
                        android:inputType="phone"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textColorHint="#515C6F" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Email_otp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phonenum">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:background="#F7F7F7"
                        android:drawableEnd="@drawable/ic_outline_email_24"
                        android:ems="10"
                        android:hint="@string/edtxt_hint_mail"
                        android:inputType="phone"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textColorHint="#515C6F" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>