<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".authUi.PhoneVerify">
    <include
        android:id="@+id/include"
        layout="@layout/custom_appbar"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/Otp_crdV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#F7F7F7"
            app:cardBackgroundColor="#F7F7F7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/Otp_btn_verify"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@drawable/custom_button"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="@dimen/_27sdp"
                    android:text="@string/verify_btn"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="#F2F2F2"
                    android:textSize="@dimen/_16ssp"
                    app:backgroundTint="#F2BB13"
                    app:icon="@drawable/ic_baseline_arrow_forward_24"
                    app:iconGravity="end"
                    app:iconPadding="@dimen/_27sdp"
                    app:iconTint="#F2F2F2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Otp_txt_noCode"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/Otp_txt_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/otp_getCOde"
                    android:textColor="#020202"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintEnd_toEndOf="@+id/Otp_edtxt_name"
                    app:layout_constraintStart_toStartOf="@+id/Otp_edtxt_name"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Otp_edtxt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Otp_txt_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:background="#F7F7F7"
                        android:drawableEnd="@drawable/ic_baseline_perm_identity_24"
                        android:ems="10"
                        android:hint="@string/edtxt_Code"
                        android:inputType="phone"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textColor="#515C6F"
                        android:textColorHint="#515C6F" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/Otp_txt_noCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_41sdp"
                    android:fontFamily="@font/montserratsemibold"
                    android:text="@string/otp_missing_code"
                    android:textColor="#2949CC"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Otp_edtxt_name" />

                <TextView
                    android:id="@+id/Otp_txt_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:fontFamily="@font/montserrat"
                    android:textColor="#2949CC"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Otp_txt_verify" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>